syntax = "proto3";

package protobuf.user;

message User {
    uint32 id = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;

    enum Gender {
        male = 0;
        female = 1;
    }

    message UserProfile {
        string nickname = 1;
        Gender gender = 4;
        string birthday = 5;
    }
}